--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "build:css":"tailwindcss -m -i tailwind.css -o app/styles/global.css",
-    "dev:css":"tailwindcss -w -i tailwind.css -o app/styles/global.css",
+    "build:css": "tailwindcss -m -i tailwind.css -o app/styles/global.css",
+    "dev:css": "tailwindcss -w -i tailwind.css -o app/styles/global.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "start": "remix-serve build"
   },
@@ -13,11 +13,14 @@
     "@remix-run/node": "^1.7.4",
     "@remix-run/react": "^1.7.4",
     "@remix-run/serve": "^1.7.4",
+    "autoprefixer": "^10.4.13",
     "concurrently": "^7.5.0",
     "isbot": "^3.5.4",
+    "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.2.2"
+    "tailwindcss": "^3.2.4",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.4",
